# WastelandAdventures

./: .clang-format  .clangd  .gitignore  .nvim.lua  CMakeLists.txt  Makefile  cmake.sh  compile_commands.json  compile_flags.txt  premake5.lua  tags
assets/: urizen_onebit_tileset.txt
data/: entities.json  test.json
docs/: todo.md
src/: Makefile  ai.h  assetmanager.c  assetmanager.h  behaviourtree.c  behaviourtree.h  blackboard.c  blackboard.h  camera.c  camera.h  collision.c  collision.h  components.c  components.h  components_gameplay.h  cvec.c  cvec.h  datamanager.c  datamanager.h  debugdraw.c  debugdraw.h  dray.c  dray.h  ecs_components.c  ecs_components.h  ecs_gameplay_handlers.c  ecs_gameplay_handlers.h  entities.c  entities.h  flecs.c  flecs.h  glyph.c  glyph.h  grid.c  grid.c.bak  grid.h  grid.h.bak  handlers.c  handlers.h  hashtable.c  (+36 more)
tests/: Makefile  test_tweens.c  testdray.c
